<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.experiment.testcoltomex.presentation.transaction.viewmodal.TransactionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:background="@color/pinkColor" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/backgroundColor" />


        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineAbove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/backgroundCardView"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/guidelineAbove">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineStartContentCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.15" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineCenterContentCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineStartImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.35" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEndImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.65" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/transactionName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="start"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/name_user"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineCenterContentCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guidelineStartContentCardView"
                    tools:text="@string/name_user" />

                <View
                    android:id="@+id/view"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintBottom_toBottomOf="@+id/transactionName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/transactionName" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/transactionPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="end"
                    android:text="@string/phone_user"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintBottom_toBottomOf="@+id/transactionName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view"
                    app:layout_constraintTop_toTopOf="@+id/guidelineStartContentCardView"
                    tools:text="@string/phone_user" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/transactionLayoutCash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/to_pay"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/transactionName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/transactionEditTextCash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@android:color/transparent"
                        android:drawableEnd="@drawable/ic_dollar"
                        android:fontFamily="@font/roboto"
                        android:inputType="number"
                        android:onTextChanged="@{viewmodel.onTextChanged}"
                        android:text="@={viewmodel.topay}" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/transactionCostServiceContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/transactionLayoutCash">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/service_cost"
                            android:textSize="15sp"
                            app:fontFamily="@font/roboto" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto"
                            android:gravity="end"
                            android:hint="@string/dash"
                            android:text="@{viewmodel.serviceCost}"
                            app:fontFamily="@font/roboto" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="5dp"
                        android:background="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/transactionTotalContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/transactionCostServiceContainer">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/total"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:fontFamily="@font/roboto" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto"
                            android:gravity="end"
                            android:hint="@string/dash"
                            android:text="@{viewmodel.total}"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:fontFamily="@font/roboto" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="5dp"
                        android:background="@android:color/darker_gray" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/transactionLayoutMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_message"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/transactionTotalContainer">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/transactionEditTextMesage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@android:color/transparent"
                        android:fontFamily="@font/roboto"
                        android:lines="3"
                        android:text="@={viewmodel.message}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:onClick="@{()->viewmodel.onClickMakeTransaction()}"
                    android:padding="10dp"
                    android:text="@string/confirm"
                    android:enabled="@{viewmodel.buttonEnable}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEndImage"
                    app:layout_constraintStart_toStartOf="@id/guidelineStartImage" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:shape="ring"
            app:cardCornerRadius="50dp"
            app:cardElevation="30dp"
            app:layout_constraintBottom_toTopOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/materialCardView">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher" />

        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnPopupPrintersClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="@{()->viewmodel.onClickClose()}"
            android:padding="16dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
